index & style modified

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
    				<img src="img/image0.png">
    			</div>
    			<div class="col-sm-6">
-   				<h1 class="mt-3 aboutmeshadow">About Me</h1>
+   				<h2 class="mt-3 aboutmeshadow text-white">About Me</h2>
    				<p>Hello, I'm a junior programmer, i do not have any experience, graduates from business administration, good at selling or marketing, and still learning about programming</p>
    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
    				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -152,7 +152,7 @@
 
 <!-- My Experience -->
 <div class="container">
-            <h4>Perluas Wawasan Anda</h4>
+            <h2 class="text-center">Perluas Wawasan Anda</h2>
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-timeline2">
@@ -229,7 +229,7 @@
 
 <!-- Portfolio -->
 <div>
-	<h1 class="text-center">Portfolio</h1>
+	<h2 class="text-center mt-5 portfolio">Portfolio</h2>
 </div>
 
 
