--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <!-- navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg bg-secondary">
 		  <a class="navbar-brand page-scroll" href="#home"><img src="img/logo.png"></a>
 		 
 		 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,16 +52,14 @@
 		<div class="container">
   			<div class="row">
    				<div class="col-sm-6">
-					<h1 class="display-4 ml-5 font-weight-bold namasaya">Raka Buana Sati</h1>
-					<h4 class="namasaya">Junior Developer</h4>
+					<h1 class="display-4 ml-5 text-white font-weight-bold namasaya">Raka Buana Sati</h1>
+					<h4 class="namasaya font-weight-bold text-white">Junior Developer</h4>
 					<button type="button" class="btn btn-outline-primary ml-5 mt-3 button">View Portfolio</button>
 					<button type="button" class="btn btn-primary ml-3 mt-3 button">Do Not Click</button>
 				</div>
 			
 
-				<div class="foto1 col-sm-6">
-					<img src="img/image10.png" class="position-absolute">
-				</div>
+				
 			</div>
 		</div>
 </nav>
@@ -97,7 +95,7 @@
 
 <!-- my skill -->
 <div class="skill">
-	<h2 class="text-center text-white pt-5 font-weight-bold">My Skills</h2>
+	<h2 class="text-center text-dark pt-5 font-weight-bold">My Skills</h2>
 </div>
 
 <!-- akhir my skill -->
@@ -228,9 +226,46 @@
 
 
 <!-- Portfolio -->
-<div>
-	<h2 class="text-center mt-5 portfolio">Portfolio</h2>
-</div>
+
+<section class="portofolio" id="portfolio">
+    <div class="container">
+    	<h2 class="text-center mt-5">Portfolio</h2>
+        <div class="row">
+            <div class="col-sm-4">
+                <a href="" >
+                     <img src="img/1.jpeg" class="img-thumbnail">
+                </a>
+            </div>
+
+             <div class="col-sm-4">
+                <a href="">
+                     <img src="img/1.jpeg" class="img-thumbnail">
+                </a>
+            </div>
+             <div class="col-sm-4">
+                <a href="">
+                     <img src="img/1.jpeg" class="img-thumbnail">
+                </a>
+            </div>
+             <div class="col-sm-4">
+                <a href="">
+                     <img src="img/1.jpeg" class="img-thumbnail">
+                </a>
+            </div>
+             <div class="col-sm-4">
+                <a href="">
+                     <img src="img/1.jpeg" class="img-thumbnail">
+                </a>
+            </div>
+             <div class="col-sm-4">
+                <a href="">
+                     <img src="img/1.jpeg" class="img-thumbnail">
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 <!-- akhir Portfolio -->
