--- a/index.html
+++ b/index.html
@@ -93,17 +93,18 @@
 
 
 
-<!-- my skill -->
-<div class="skill">
-	<h2 class="text-center text-dark pt-5 font-weight-bold">My Skills</h2>
-</div>
-
-<!-- akhir my skill -->
-
-
-<!-- My services -->
+<!-- my Services -->
 <div class="services">
 	<h2 class="text-center pt-5">My Services</h2>
+</div>
+
+<!-- akhir my Services -->
+
+
+<!-- My Skill -->
+<div class="skill">
+	<h2 class="text-center text-dark pt-5 font-weight-bold">My Skills</h2>
+
 		<div class="container">
 			<div class="row text-center">
   			
